# kafka-python

./: .pyproject.toml.swp  README.md  chatroom.tcss  pyproject.toml
src/chatcon/: main.py
src/chatpro/: main.py
src/chatroom/: chatroom.tcss  main.py  ui.py
src/kafka_python_demo/: consumer.py  producer.py
