[project]
name = "kafka-python"
version = "0.1.0"
description = "kafka-python"
authors = [
    {name = "jacob", email = "jacob8753@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
